RenderPerf: Further updates from feedback
- RenderPerf now continues execution when test is too heavy for the
  system
- Made result reporting more robust
- Added Label test and RandomSizeText test
  - Since RandomSizeText does not work properly on D3D12 (rendering
    either corrupts or does not render anything) it is temporarily
    disabled until it will be fixed.
- Other minor details ironed out